<!--
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">BCSettings</string>
    <string name="app_title">Barcode Capture Settings</string>
    <string name="settings">Settings</string>
    <string name="sdk_version">Barcode Capture Settings Sample\nSDK %1$s</string>
    <string name="barcode_capture">Barcode Capture</string>
    <string name="symbologies">Symbologies</string>
    <string name="all">All</string>
    <string name="enabled">Enabled</string>
    <string name="color_inverted">Color Inverted</string>
    <string name="range">Range</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="extensions">Extensions</string>
    <string name="checksums">Checksums</string>
    <string name="location_selection">Location Selection</string>
    <string name="feedback">Feedback</string>
    <string name="code_duplicate_filter">Code Duplicate Filter</string>
    <string name="composite_types">Composite Types</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="type">Type</string>
    <string name="none">None</string>
    <string name="radius">Radius</string>
    <string name="size">Size</string>
    <string name="time_millis">%1$d (ms)</string>
    <string name="size_with_unit">%1$.2f (%2$s)</string>
    <string name="size_no_unit">%1$.2f</string>
    <string name="value">Value</string>
    <string name="number_not_valid">This is not a valid number</string>
    <string name="camera">Camera</string>
    <string name="camera_position">Camera Position</string>
    <string name="torch_state">Desired Torch State</string>
    <string name="turned_on">ON</string>
    <string name="turned_off">OFF</string>
    <string name="auto">AUTO</string>
    <string name="max_frame_rate">Max Frame Rate</string>
    <string name="preferred_resolution">Preferred Resolution</string>
    <string name="zoom_factor">Zoom Factor</string>
    <string name="zoom_gesture_zoom_factor">Zoom Gesture Zoom Factor</string>
    <string name="focus_gesture_strategy">Focus Gesture Strategy</string>
    <string name="camera_settings">Camera Settings</string>
    <string name="view">View</string>
    <string name="scan_area">Scan Area</string>
    <string name="point_of_interest">Point of Interest</string>
    <string name="overlay">Overlay</string>
    <string name="view_finder">Viewfinder</string>
    <string name="logo">Logo</string>
    <string name="controls">Controls</string>
    <string name="should_show_guides">Should Show Scan Area Guides</string>
    <string name="margins">Margins</string>
    <string name="top">Top</string>
    <string name="right">Right</string>
    <string name="bottom">Bottom</string>
    <string name="left">Left</string>
    <string name="gestures">Gestures</string>
    <string name="tap_to_focus">Tap to Focus</string>
    <string name="swipe_to_zoom">Swipe to Zoom</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="brush">Brush</string>
    <string name="_default">Default</string>
    <string name="transparent">Transparent</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="rectangular">Rectangular</string>
    <string name="width_and_height">Width and Height</string>
    <string name="width_and_height_aspect">Width and Height Aspect</string>
    <string name="height_and_width_aspect">Height and Width Aspect</string>
    <string name="shorter_dimension_and_aspect_ratio">Shorter Dimension And Aspect Ratio</string>
    <string name="style">Style</string>
    <string name="line_style">Line Style</string>
    <string name="blue">Blue</string>
    <string name="black">Black</string>
    <string name="color">Color</string>
    <string name="dimming">Dimming</string>
    <string name="animation">Animation</string>
    <string name="looping">Looping</string>
    <string name="size_specification">Size Specification</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="shorter_dimension">Shorter Dimension (Fraction)</string>
    <string name="height_aspect">Height Aspect</string>
    <string name="width_aspect">Width Aspect</string>
    <string name="longer_dimension_aspect">Longer Dimension Aspect</string>
    <string name="enabled_color">Enabled Color</string>
    <string name="disabled_color">Disabled Color</string>
    <string name="frame_color">Frame Color</string>
    <string name="dot_color">Dot Color</string>
    <string name="white">White</string>
    <string name="laserline">Laserline</string>
    <string name="aimer">Aimer</string>
    <string name="anchor">Anchor</string>
    <string name="zoom_button">Zoom Button</string>
    <string name="torch_button">Torch Button</string>
    <string name="camera_button">Camera Button</string>
    <string name="result_title">Scan results</string>
    <string name="cc_result_parametrised">CC Type %1$s\n%2$s: %3$s\nSymbol count: %4$d</string>
    <string name="result_parametrised">%1$s: %2$s\nSymbol count: %3$d</string>
    <string name="result_handling">Result</string>
    <string name="continuous_scanning">Continuous Scanning</string>
    <string name="disable_all">Disable All</string>
    <string name="enable_all">Enable All</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
</resources>
