<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~ http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@android:color/white"
        app:cardElevation="3dp"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switch_torch_button"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeightSmall"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:background="?android:attr/selectableItemBackground"
                android:saveEnabled="false"
                android:text="@string/torch_button"/>

            <Switch
                android:id="@+id/switch_camera_button"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeightSmall"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:background="?android:attr/selectableItemBackground"
                android:saveEnabled="false"
                android:text="@string/camera_button"/>

            <Switch
                android:id="@+id/switch_zoom_button"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeightSmall"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:background="?android:attr/selectableItemBackground"
                android:saveEnabled="false"
                android:text="@string/zoom_button"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>