<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~ http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="0dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/margins"/>

                <LinearLayout
                    android:id="@+id/container_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="?android:attr/listPreferredItemHeightSmall"
                        android:textAppearance="?android:attr/textAppearanceListItem"
                        android:paddingStart="24dp"
                        android:paddingEnd="8dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:text="@string/top"/>

                    <TextView
                        android:id="@+id/text_top_margin"
                        android:layout_width="match_parent"
                        android:layout_height="?android:attr/listPreferredItemHeightSmall"
                        android:paddingStart="8dp"
                        android:paddingEnd="24dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical|end"
                        tools:text="0.00 (Fraction)"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="?android:attr/listPreferredItemHeightSmall"
                        android:textAppearance="?android:attr/textAppearanceListItem"
                        android:paddingStart="24dp"
                        android:paddingEnd="8dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:text="@string/right"/>

                    <TextView
                        android:id="@+id/text_right_margin"
                        android:layout_width="match_parent"
                        android:layout_height="?android:attr/listPreferredItemHeightSmall"
                        android:paddingStart="8dp"
                        android:paddingEnd="24dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical|end"
                        tools:text="0.00 (Fraction)"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="?android:attr/listPreferredItemHeightSmall"
                        android:textAppearance="?android:attr/textAppearanceListItem"
                        android:paddingStart="24dp"
                        android:paddingEnd="8dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:text="@string/bottom"/>

                    <TextView
                        android:id="@+id/text_bottom_margin"
                        android:layout_width="match_parent"
                        android:layout_height="?android:attr/listPreferredItemHeightSmall"
                        android:paddingStart="8dp"
                        android:paddingEnd="24dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical|end"
                        tools:text="0.00 (Fraction)"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="?android:attr/listPreferredItemHeightSmall"
                        android:textAppearance="?android:attr/textAppearanceListItem"
                        android:paddingStart="24dp"
                        android:paddingEnd="8dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:text="@string/left"/>

                    <TextView
                        android:id="@+id/text_left_margin"
                        android:layout_width="match_parent"
                        android:layout_height="?android:attr/listPreferredItemHeightSmall"
                        android:paddingStart="8dp"
                        android:paddingEnd="24dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical|end"
                        tools:text="0.00 (Fraction)"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_all_symbologies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="0dp"
            app:cardElevation="3dp">

            <Switch
                android:id="@+id/switch_enable_guides"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeightSmall"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:background="?android:attr/selectableItemBackground"
                android:paddingStart="24dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingEnd="24dp"
                android:saveEnabled="false"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/should_show_guides"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>